--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
   </style>
 </head>
 <body>
-  <script src="jquery-1.9.1.js"></script>
-  <script src="snake.js"></script>
+  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>  <script src="snake.js"></script>
   <script src="snakeUI.js"></script>
   <script src="app.js"></script>
 </body>
